fix: issues because of the align full change

--- a/src/blocks/container/editor.lazy.scss
+++ b/src/blocks/container/editor.lazy.scss
@@ -162,7 +162,7 @@
 		}
 
 		.block-list-appender.wp-block {
-
+			width: auto;
 			button {
 				color: #a0a7ac;
 				font-size: 62px;
